<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_drivers"
        android:icon="@drawable/ic_perm_identity_white_18dp"
        android:orderInCategory="100"
        android:title="@string/menu_drivers"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_vehicles"
        android:icon="@drawable/ic_motorcycle_white_18dp"
        android:orderInCategory="100"
        android:title="@string/menu_vehicles"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_18dp"
        android:orderInCategory="100"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/exit"
        android:orderInCategory="100"
        android:title="@string/menu_logout" />

</menu>