<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#764502"
    tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:id="@+id/createdLabel" android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFEE00"
        android:layout_marginTop="35dp"
        android:textSize="50dp"
        android:singleLine="false"
        android:textAlignment="center"
        android:layout_marginBottom="35dp" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:id="@+id/vehiclestart"
        android:textSize="15sp"
        android:textColor="#000000"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/user"
        android:layout_below="@+id/createdLabel"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:text="@string/login_button"
        android:id="@+id/createdmainmenu"
        android:textSize="16sp"
        android:textColor="#FFEE00"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttonshape"
        android:layout_below="@+id/pword"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:id="@+id/loginErrorMsg"
        android:textColor="#000000"
        android:layout_below="@+id/passres"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pword"
        android:hint="@string/password"
        android:layout_below="@+id/vehiclestart"
        android:layout_alignLeft="@+id/vehiclestart"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_alignRight="@+id/vehiclestart"
        android:layout_alignEnd="@+id/vehiclestart"
        android:drawableLeft="@drawable/password"
        android:layout_marginTop="15dp"
        android:password="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/forgot_password_button"
        android:id="@+id/passres"
        android:textSize="16sp"
        android:textColor="#FFEE00"
        android:layout_toStartOf="@+id/createdmainmenu"
        android:layout_below="@+id/pword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/buttonshape"
        android:layout_toLeftOf="@+id/createdmainmenu"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp" />


</RelativeLayout>
